Fixed horizontal scroll error caused by footer

--- a/styles/design.css
+++ b/styles/design.css
@@ -75,12 +75,12 @@ body {
 .page-footer {
     display: table;
     float: left;
-    margin-right: 5px;
+    margin: 0;
     text-align: center;
     background-color: grey;
     border-style: double;
     border-color: black;
-    width: 100%;
+    width: 99%;
     height: 10%;
     position: absolute;
 }
